*grsecurity-sources-4.9.64 (23 Nov 2017)

  23 Nov 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.64.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.64

*grsecurity-sources-4.9.59 (27 Oct 2017)

  27 Oct 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.59.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.59

*grsecurity-sources-4.9.58 (23 Oct 2017)

  23 Oct 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.58.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.58

*grsecurity-sources-4.9.56 (13 Oct 2017)

  13 Oct 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.56.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.56

*grsecurity-sources-4.9.54 (09 Oct 2017)

  09 Oct 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.54.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.54

*grsecurity-sources-4.9.53 (07 Oct 2017)

  07 Oct 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.53.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.53

*grsecurity-sources-4.9.52 (30 Sep 2017)

  30 Sep 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.52.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.52

*grsecurity-sources-4.9.51 (21 Sep 2017)

  21 Sep 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.51.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.51

*grsecurity-sources-4.9.50 (15 Sep 2017)

  15 Sep 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.50.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.50

*grsecurity-sources-4.9.49 (12 Sep 2017)

  12 Sep 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.49.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.49

*grsecurity-sources-4.9.48 (09 Sep 2017)
